Revision on Problem 3

--- a/P8105-HW2.md
+++ b/P8105-HW2.md
@@ -168,7 +168,7 @@ June of 2022 was 1.812^{4}.
 
 # Problem 3 Great British Bake Off Dataset
 
-## Section 1: Data import of bakers.csv, bakes.csv, and results.csv, and creation of a single, well-organized dataset
+## Section 1: Data import and cleaning of bakers.csv, bakes.csv, and results.csv
 
 ``` r
 bakers_df =
@@ -280,6 +280,8 @@ GBbakeoff_df = results_df |>
   relocate(series, episode, baker_first_name, baker_last_name, baker_age, baker_occupation, hometown, technical, result,signature_bake, show_stopper)
 ```
 
+In this combined dataset, there are 1136 rows and 11 columns.
+
 Exporting the final dataset as a CSV:
 
 ``` r
@@ -291,11 +293,11 @@ write_csv(GBbakeoff_df,"data/GBbakeoff_df.csv")
 ``` r
 Star_win_df = 
   GBbakeoff_df |> 
-  filter(series>=5 & series<=10, result == c("Star Baker","Series Winner")) |> 
+  filter(series >= 5 & series <= 10, result == "Star Baker"| result == "Series Winner") |> 
   select(series, episode, baker_first_name, baker_last_name, baker_age, result, baker_occupation, hometown, technical,signature_bake, show_stopper)
 
 knitr::kable(
-  Star_win_df,format = "html",
+  Star_win_df, format = "html",
   caption = "Table of Star baker/Winner of each episode in Seasons 5 through 10 "
   )
 ```
@@ -347,6 +349,41 @@ show_stopper
 5
 </td>
 <td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Nancy
+</td>
+<td style="text-align:left;">
+Birtwhistle
+</td>
+<td style="text-align:right;">
+60
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Retired Practice Manager
+</td>
+<td style="text-align:left;">
+Barton-upon-Humber, Lincolnshire
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Coffee and Hazelnut Swiss Roll
+</td>
+<td style="text-align:left;">
+Jaffa Orange Cakes
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
 2
 </td>
 <td style="text-align:left;">
@@ -375,6 +412,41 @@ Rosemary Seeded Crackers
 </td>
 <td style="text-align:left;">
 Pirates!
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Luis
+</td>
+<td style="text-align:left;">
+Troyano
+</td>
+<td style="text-align:right;">
+42
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Graphic Designer
+</td>
+<td style="text-align:left;">
+Poynton, Cheshire
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Opposites Attract Rolls
+</td>
+<td style="text-align:left;">
+Roscón de Reyes
 </td>
 </tr>
 <tr>
@@ -522,6 +594,41 @@ Stair of Éclairs (Lavender and Blueberry & Rose and Raspberry Éclairs)
 5
 </td>
 <td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Richard
+</td>
+<td style="text-align:left;">
+Burr
+</td>
+<td style="text-align:right;">
+38
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Builder
+</td>
+<td style="text-align:left;">
+Mill Hill, London
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Fruit Swedish Tea Ring
+</td>
+<td style="text-align:left;">
+Rhubarb and Custard and Toffee Apple Doughnuts
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:right;">
 9
 </td>
 <td style="text-align:left;">
@@ -592,6 +699,41 @@ Red Windmill
 6
 </td>
 <td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Marie
+</td>
+<td style="text-align:left;">
+Campbell
+</td>
+<td style="text-align:right;">
+66
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Retired
+</td>
+<td style="text-align:left;">
+Auchterarder, Perthshire
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Zingy Citrus Madeira Cake
+</td>
+<td style="text-align:left;">
+A Walk in the Black Forest
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
 2
 </td>
 <td style="text-align:left;">
@@ -620,6 +762,41 @@ Orange, Rosemary and Almond Biscotti
 </td>
 <td style="text-align:left;">
 Sandwich de la Confiture
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Ian
+</td>
+<td style="text-align:left;">
+Cumming
+</td>
+<td style="text-align:right;">
+41
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Travel photographer
+</td>
+<td style="text-align:left;">
+Great Wilbraham, Cambridgeshire
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Wild Garlic Pesto Soda Breads
+</td>
+<td style="text-align:left;">
+Flour Power
 </td>
 </tr>
 <tr>
@@ -662,6 +839,41 @@ Trio of Spicy and Herby Baked Cheesecakes
 6
 </td>
 <td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Nadiya
+</td>
+<td style="text-align:left;">
+Hussain
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Full-time mother
+</td>
+<td style="text-align:left;">
+Leeds / Luton
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Naked Blueberry and Caraway Crunch Cake
+</td>
+<td style="text-align:left;">
+Chocolate and Strawberry Lime Ice Cream Roll
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
 6
 </td>
 <td style="text-align:left;">
@@ -697,6 +909,41 @@ His ‘n’ Hers Vol-au-vents
 6
 </td>
 <td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Tamal
+</td>
+<td style="text-align:left;">
+Ray
+</td>
+<td style="text-align:right;">
+29
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Trainee anaesthetist
+</td>
+<td style="text-align:left;">
+Manchester
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Middle Eastern Game Pie
+</td>
+<td style="text-align:left;">
+Spiced Blackberry, Raspberry and Cardamom Charlotte Russe
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
 8
 </td>
 <td style="text-align:left;">
@@ -725,6 +972,111 @@ Rose Pistachio and Mocha Hazelnut Horns
 </td>
 <td style="text-align:left;">
 Bubble Gum and Peppermint Cream Religieuse à l’ancienne
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:left;">
+Nadiya
+</td>
+<td style="text-align:left;">
+Hussain
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Full-time mother
+</td>
+<td style="text-align:left;">
+Leeds / Luton
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Peanut Salted Caramel and Chocolate Tart
+</td>
+<td style="text-align:left;">
+Peacock in Nan’s Door
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:left;">
+Nadiya
+</td>
+<td style="text-align:left;">
+Hussain
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Series Winner
+</td>
+<td style="text-align:left;">
+Full-time mother
+</td>
+<td style="text-align:left;">
+Leeds / Luton
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Cardamom and Almond Buns & Nutmeg and Sour Cherry Fingers
+</td>
+<td style="text-align:left;">
+My Big Fat British Wedding Cake
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Jane
+</td>
+<td style="text-align:left;">
+Beedle
+</td>
+<td style="text-align:right;">
+61
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Garden designer
+</td>
+<td style="text-align:left;">
+Beckenham
+</td>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Lemon and Poppy Seed Drizzle Cake
+</td>
+<td style="text-align:left;">
+Chocolate Orange Mirror Cake
 </td>
 </tr>
 <tr>
@@ -767,6 +1119,41 @@ Gingerbread Pub with Sticky Ginger Carpet
 7
 </td>
 <td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Tom
+</td>
+<td style="text-align:left;">
+Gilliford
+</td>
+<td style="text-align:right;">
+26
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Project engagement manager
+</td>
+<td style="text-align:left;">
+Rochdale
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+Chocolate Orange and Chilli Swirl Bread
+</td>
+<td style="text-align:left;">
+Jörmungandr and Mjölnir
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
 4
 </td>
 <td style="text-align:left;">
@@ -795,6 +1182,42 @@ Red Onion Chutney, Brie and Bacon Yorkshire Puddings
 </td>
 <td style="text-align:left;">
 Tropical Churros
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Candice
+</td>
+<td style="text-align:left;">
+Brown
+</td>
+<td style="text-align:right;">
+31
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+PE teacher
+</td>
+<td style="text-align:left;">
+Barton-Le-Clay, Bedfordshire
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Danish Pastry Croque Monsieur Kites and Cinnamon Apple, Vanilla Crème
+Rose Danish
+</td>
+<td style="text-align:left;">
+Sausage, Black Pudding and Apple Rounds and Banoffee Whiskey Cups
 </td>
 </tr>
 <tr>
@@ -837,6 +1260,41 @@ Floral Tea Cake
 7
 </td>
 <td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Andrew
+</td>
+<td style="text-align:left;">
+Smyth
+</td>
+<td style="text-align:right;">
+25
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Aerospace engineer
+</td>
+<td style="text-align:left;">
+Derby / Holywood, County Down
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Tropical Holiday Roulade
+</td>
+<td style="text-align:left;">
+Childhood Ice Cream Mousse Cakes
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
 8
 </td>
 <td style="text-align:left;">
@@ -865,6 +1323,111 @@ Cheesy Cheeky Fish Pies
 </td>
 <td style="text-align:left;">
 Peacock
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:left;">
+Andrew
+</td>
+<td style="text-align:left;">
+Smyth
+</td>
+<td style="text-align:right;">
+25
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Aerospace engineer
+</td>
+<td style="text-align:left;">
+Derby / Holywood, County Down
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Cheesy Elephant Ears and Herby Treble Clefs
+</td>
+<td style="text-align:left;">
+Philharmonic Fondants
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:left;">
+Candice
+</td>
+<td style="text-align:left;">
+Brown
+</td>
+<td style="text-align:right;">
+31
+</td>
+<td style="text-align:left;">
+Series Winner
+</td>
+<td style="text-align:left;">
+PE teacher
+</td>
+<td style="text-align:left;">
+Barton-Le-Clay, Bedfordshire
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Queen Victoria’s Mango and Strawberry Crown
+</td>
+<td style="text-align:left;">
+Picnic for Pearly Kings and Queens
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Steven
+</td>
+<td style="text-align:left;">
+Carter-Bailey
+</td>
+<td style="text-align:right;">
+34
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Marketer
+</td>
+<td style="text-align:left;">
+Watford, Hertfordshire
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Bonfire Night Cake
+</td>
+<td style="text-align:left;">
+‘A Baker’s Lunch’ Cake
 </td>
 </tr>
 <tr>
@@ -907,6 +1470,41 @@ Amarpressi Biscuits
 8
 </td>
 <td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Julia
+</td>
+<td style="text-align:left;">
+Chernogorova
+</td>
+<td style="text-align:right;">
+21
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Aviation Broker
+</td>
+<td style="text-align:left;">
+Crawley, West Sussex
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Earl Grey Dried Fruit Teacakes
+</td>
+<td style="text-align:left;">
+‘The Snail Under a Mushroom’ Bread Sculpture
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
 4
 </td>
 <td style="text-align:left;">
@@ -935,6 +1533,41 @@ Salted Bay Caramel Millionaire Shortbreads
 </td>
 <td style="text-align:left;">
 Sticky Toffee Apple Caramel Cake
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+5
+</td>
+<td style="text-align:left;">
+Sophie
+</td>
+<td style="text-align:left;">
+Faldo
+</td>
+<td style="text-align:right;">
+33
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Former army officer and trainee stuntwoman
+</td>
+<td style="text-align:left;">
+West Molesey, Surrey
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Ginger, Fig and Honey Steamed School Pudding
+</td>
+<td style="text-align:left;">
+Raspberry, Yuzu & White Chocolate Bûche Trifle Terrine
 </td>
 </tr>
 <tr>
@@ -977,6 +1610,41 @@ North London
 8
 </td>
 <td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Steven
+</td>
+<td style="text-align:left;">
+Carter-Bailey
+</td>
+<td style="text-align:right;">
+34
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Marketer
+</td>
+<td style="text-align:left;">
+Watford, Hertfordshire
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Italian Style Cannoli
+</td>
+<td style="text-align:left;">
+‘Sicilian-style’ Sfogliatelle
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
 8
 </td>
 <td style="text-align:left;">
@@ -1009,6 +1677,111 @@ Camembert & Onion and Apple & Blueberry Bedfordshire Clangers
 </tr>
 <tr>
 <td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:left;">
+Sophie
+</td>
+<td style="text-align:left;">
+Faldo
+</td>
+<td style="text-align:right;">
+33
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Former army officer and trainee stuntwoman
+</td>
+<td style="text-align:left;">
+West Molesey, Surrey
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Strawberry & Rhubarb and Chestnut & Vanilla Choux Buns
+</td>
+<td style="text-align:left;">
+‘Tutu with Opera Filling’ Meringue Centrepiece
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:left;">
+Sophie
+</td>
+<td style="text-align:left;">
+Faldo
+</td>
+<td style="text-align:right;">
+33
+</td>
+<td style="text-align:left;">
+Series Winner
+</td>
+<td style="text-align:left;">
+Former army officer and trainee stuntwoman
+</td>
+<td style="text-align:left;">
+West Molesey, Surrey
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:left;">
+Spelt Boules, Mushroom Ciabatta and Orange Plaited Brioche
+</td>
+<td style="text-align:left;">
+‘Ode to the Honey Bee’ Entremet
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+Manon
+</td>
+<td style="text-align:left;">
+Lagrave
+</td>
+<td style="text-align:right;">
+26
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Software project manager
+</td>
+<td style="text-align:left;">
+London
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
 9
 </td>
 <td style="text-align:right;">
@@ -1034,6 +1807,41 @@ Rotherham
 </td>
 <td style="text-align:right;">
 2
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+Rahul
+</td>
+<td style="text-align:left;">
+Mandal
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Research scientist
+</td>
+<td style="text-align:left;">
+Rotherham
+</td>
+<td style="text-align:right;">
+4
 </td>
 <td style="text-align:left;">
 NA
@@ -1152,6 +1960,41 @@ NA
 9
 </td>
 <td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Kim-Joy
+</td>
+<td style="text-align:left;">
+Hewlett
+</td>
+<td style="text-align:right;">
+27
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Mental health specialist
+</td>
+<td style="text-align:left;">
+Leeds
+</td>
+<td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
 8
 </td>
 <td style="text-align:left;">
@@ -1174,6 +2017,76 @@ London
 </td>
 <td style="text-align:right;">
 3
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:left;">
+Ruby
+</td>
+<td style="text-align:left;">
+Bhogal
+</td>
+<td style="text-align:right;">
+29
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Project manager
+</td>
+<td style="text-align:left;">
+London
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:left;">
+Rahul
+</td>
+<td style="text-align:left;">
+Mandal
+</td>
+<td style="text-align:right;">
+30
+</td>
+<td style="text-align:left;">
+Series Winner
+</td>
+<td style="text-align:left;">
+Research scientist
+</td>
+<td style="text-align:left;">
+Rotherham
+</td>
+<td style="text-align:right;">
+2
 </td>
 <td style="text-align:left;">
 NA
@@ -1362,6 +2275,146 @@ NA
 10
 </td>
 <td style="text-align:right;">
+6
+</td>
+<td style="text-align:left;">
+Steph
+</td>
+<td style="text-align:left;">
+Blackwell
+</td>
+<td style="text-align:right;">
+28
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Shop assistant
+</td>
+<td style="text-align:left;">
+Chester
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+7
+</td>
+<td style="text-align:left;">
+Henry
+</td>
+<td style="text-align:left;">
+Bird
+</td>
+<td style="text-align:right;">
+20
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Student
+</td>
+<td style="text-align:left;">
+Durham
+</td>
+<td style="text-align:right;">
+3
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+8
+</td>
+<td style="text-align:left;">
+Steph
+</td>
+<td style="text-align:left;">
+Blackwell
+</td>
+<td style="text-align:right;">
+28
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Shop assistant
+</td>
+<td style="text-align:left;">
+Chester
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
+9
+</td>
+<td style="text-align:left;">
+Alice
+</td>
+<td style="text-align:left;">
+Fevronia
+</td>
+<td style="text-align:right;">
+28
+</td>
+<td style="text-align:left;">
+Star Baker
+</td>
+<td style="text-align:left;">
+Geography teacher
+</td>
+<td style="text-align:left;">
+Essex
+</td>
+<td style="text-align:right;">
+4
+</td>
+<td style="text-align:left;">
+NA
+</td>
+<td style="text-align:left;">
+NA
+</td>
+</tr>
+<tr>
+<td style="text-align:right;">
+10
+</td>
+<td style="text-align:right;">
 10
 </td>
 <td style="text-align:left;">
@@ -1404,18 +2457,24 @@ personally relevant information of each participant was placed
 afterwards.
 
 According to the table, the first thing I noticed is that Richard Burr
-earned “Star Baker” title in four episodes of Series 5. However, Nancy
-Birtwhistle was the “Series Winner” for that series. Similarly, in
-Series 6, Ian Cumming won “Star Backer” in two episodes, and Candice
-Brown did the same in Series 7. In Series 9, there were five different
-“Star Bakers” which is one more than in the other series. In Series 10,
-Steph Balckwell earned two “Star baker” title in two episodes, yet David
-Atherton was the “Series winner”. Interestingly, there is no “Series
-Winner” recored for Series 6, 7, 8, and 9.In conclusion, based on the
-patterns observed in this table, it is clear that there were no any
-predictable overall winners. What stands out the most is that
+earned “Star Baker” title in five episodes of Series 5. However, despite
+his strong performance, Nancy Birtwhistle was the “Series Winner” for
+that series, and she also won “Star Baker” once. In Series 6, Nadiya
+Hussain won the “Star Baker” title for four time and also earned the
+“Series Winner” title. Similarly, in Series 7, Candice Brown won the
+most “Star baker” titles and ultimately become the “Series Winner”. In
+Series 8, although Steven Carter-Bailey earned the most “Star Baker”
+titles, Sophie Faldo was the “Series Winner”. In Series 9, Rahul Mandal
+earned the most “Star Baker” titles and won the “Series Winner”. In
+Series 10, Steph Blackwell earned the most “Star Baker” titles but David
+Atherton was the “Series Winner”.
+
+In conclusion, based on the patterns observed in this table, it is clear
+that there were no any predictable overall winners. The correlation
+between winning multiple “Star Baker” titles and winning the “Series
+Winner” is not consistent. What stands out the most is that
 multiple_time “Star Bakers” do not always end up with winning the
-series, which goes againt what many people might expect. This makes the
+series, which goes against what many people might expect. This makes the
 outcome of each series more surprising and unpredictable.
 
 ## Section 5: Dataset exploration of viewers.csv
